--- a/Langchain_ChatwithWebpages.ipynb
+++ b/Langchain_ChatwithWebpages.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjvyrt/mZ1rFTWF7GFHKQO",
+      "authorship_tag": "ABX9TyOTH5moT7NMLBSQsn6A3Yku",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -257,6 +257,15 @@
       },
       "execution_count": 36,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "tiktoken is an open-source byte pair encoding (BPE) tokenizer developed by OpenAI that is used for tokenizing text in their LLMs. It allows developers to count how many tokens are in a text before making calls to the OpenAI endpoint."
+      ],
+      "metadata": {
+        "id": "QoJJKpiUJRSv"
+      }
     },
     {
       "cell_type": "code",
